refactor code to use two prefixes